--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
+    "base-64": "^1.0.0",
     "expo": "~50.0.14",
     "expo-camera": "^14.1.1",
     "expo-constants": "~15.4.5",
