[+] Docker: Corrected package execution
Not tested; should work

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,17 @@
-./server/learning_handler/__pycache__
-./server/request_handler/__pycache__
-./server/learning_handler/datasets/*.zip
-./server/learning_handler/models/*.keras
-./server/uploads/*.jpg
-./server/uploads/*.JPG
-./client/
+server/learning_handler/__pycache__
+server/request_handler/__pycache__
+server/learning_handler/datasets/*.zip
+server/learning_handler/datasets/*.zip
+server/learning_handler/models/*.keras
+server/uploads/*.jpg
+server/uploads/*.JPG
+client/
+server/__pycache__
+server/model_details.json
+README.md
+screenshots/
+.expo/
+.git/
+.gitignore
+.vscode
+server/learning_handler/datasets/New*
