--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "base-64": "^1.0.0",
     "expo": "~50.0.14",
+    "expo-build-properties": "^0.11.1",
     "expo-camera": "^14.1.1",
     "expo-constants": "~15.4.5",
     "expo-image-picker": "^14.7.1",
