--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-dotenv": "^3.4.11",
+    "react-native-element-dropdown": "^2.10.4",
     "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
